# Baywatcher

./: CMakeLists.txt  README.md
Code/: Typedef.hpp  main.cpp  main.hpp
Code/User/image/: README_IMAGE_PIPELINE.md  common.h  element.cc  element.h  headfile.h  image_data.cc  image_data.h  image_handle.cc  image_handle.h  image_headfile.h  image_midline_process.cc  image_midline_process.h  image_process.cc  image_process.h  recognition_chain.cc  recognition_chain.h  stream_chain.cc  stream_chain.h  transform_table.cc  vision_runtime.cc
Code/User/image/element/: circle.cc  circle.h  crossing.cc  zebra.cc  zebra.h
Code/User/inc/: ADC.h  Communication.h  ESC.h  Fuzzy.h  IMU.h  Motor.h  PID.h  TOF.h  TargetHandler.h  VOFA.h
Code/User/src/: Communication.cc  ESC.cc  Fuzzy.cpp  Menu.cpp  Mission.cc  Motor.cc  PID.cc  StateMachine.cc  TOF.cc  TargetHandler.cc  TimerThread.cc  VOFA.cc
LQ_Libraries_new/app/: lq_app_inc.hpp
LQ_Libraries_new/app/display/: lq_display_ips20.cpp  lq_display_tft18.cpp
LQ_Libraries_new/app/gyro/: lq_i2c_icm42605.cpp  lq_i2c_icm42605.hpp
LQ_Libraries_new/common/src/: utils.cpp
LQ_Libraries_new/drv/inc/: lq_drv_inc.hpp
LQ_Libraries_new/drv/src/: lq_ncnn.cpp
LQ_Libraries_old/APP/: LQ_I2C_VL53.cpp
LQ_Libraries_old/APP/Display/: LQ_TFT18_dri.hpp
LQ_Libraries_old/APP/IMU/: LQ_I2C_ICM42605.cpp
LQ_Libraries_old/APP/inc/: LQ_I2C_VL53.hpp
LQ_Libraries_old/Driver/: LQ_ATIM_PWM.cpp  LQ_GTIM_PWM.cpp  LQ_HW_SPI.cpp  LQ_I2C_DEV.cpp  LQ_TCP_Client.cpp  LQ_UDP_Client.cpp  LQ_YOLO.cpp  WW_TimerThread.cpp
LQ_Libraries_old/Driver/inc/: LQ_AB_ENCODER.hpp  LQ_HW_ADC.hpp  LQ_HW_SPI.hpp  LQ_I2C_DEV.hpp  LQ_UDP_Client.hpp  LQ_YOLO.hpp  LQ_module_loader.hpp  lq_ncnn.hpp
cross_lib/opencv/lib/: libopencv_ml.so.4.10.0  libopencv_video.so.4.10.0  libopencv_videoio.so.410
image/: element.cc  headfile.h  image_handle.cc  image_handle.h  image_process.cc  stream_chain.cc  transform_table.h  vision_runtime.cc  vision_runtime.h
image/element/: crossing.cc  crossing.h  zebra.cc
lq_2k0301_project_template_for_recognition/: CMakeLists.txt  README_IMAGE_PIPELINE.md  build.sh
lq_2k0301_project_template_for_recognition/Code/: main.cpp  main.hpp
lq_2k0301_project_template_for_recognition/Code/User/inc/: Communication.h  common.h  recognition_chain.h  recognition_runtime.h  roi_runtime_geometry.h  stream_chain.h  transform_table.h
lq_2k0301_project_template_for_recognition/Code/User/src/: Communication.cc  recognition_chain.cc  recognition_runtime.cc  roi_runtime_geometry.cc  stream_chain.cc
lq_2k0301_project_template_for_recognition/LQ_Libraries_new/drv/inc/: lq_uart.hpp
lq_2k0301_project_template_for_recognition/LQ_Libraries_old/Driver/: WW_CAMERA.cpp  WW_Transmission.cpp
lq_2k0301_project_template_for_recognition/LQ_Libraries_old/Driver/inc/: WW_CAMERA.h
lq_2k0301_project_template_for_recognition/libraries/drv/inc/: lq_reg_atim_pwm.hpp
lq_2k0301_project_template_for_recognition/libraries/drv/src/: lq_camera.cpp
lq_2k0301_project_template_for_recognition/model/: class_names.json  deploy_calibration.json
lq_2k0301_project_template_for_running/: CMakeLists.txt  build.sh
lq_2k0301_project_template_for_running/Code/: main.cpp  main.hpp
lq_2k0301_project_template_for_running/Code/User/image/: README_IMAGE_PIPELINE.md  common.h  element.cc  image_data.cc  image_data.h  image_handle.cc  image_math.h  image_midline_process.cc  image_process.cc  image_process.h  image_switch_utils.h  recognition_chain.cc  recognition_chain.h  stream_chain.cc  stream_chain.h  transform_table.cc  transform_table.h  vision_runtime.cc  vision_runtime.h
lq_2k0301_project_template_for_running/Code/User/image/element/: zebra.cc  zebra.h
lq_2k0301_project_template_for_running/Code/User/inc/: ADC.h  Buzzer.h  Communication.h  ESC.h  Encoder.h  Key.h  Logger.h  Menu.h  Mission.h  Motor.h  PID.h  StateMachine.h  TargetHandler.h  TimerThread.h  VOFA.h
lq_2k0301_project_template_for_running/Code/User/src/: ADC.cc  Buzzer.cc  Communication.cc  ESC.cc  Encoder.cc  IMU.cc  Key.cc  Logger.cc  Menu.cpp  Motor.cc  PID.cc  TOF.cc  TargetHandler.cc  VOFA.cc
lq_2k0301_project_template_for_running/LQ_Libraries_new/app/display/: lq_display_ips20.hpp  lq_display_tft18.hpp
lq_2k0301_project_template_for_running/LQ_Libraries_new/drv/inc/: lq_ncnn.hpp
lq_2k0301_project_template_for_running/LQ_Libraries_old/APP/Display/: LQ_Font.cpp  LQ_Font.hpp  LQ_TFT18_dri.cpp
lq_2k0301_project_template_for_running/LQ_Libraries_old/APP/IMU/: LQ_I2C_ICM42605.hpp  LQ_I2C_MPU6050.cpp  LQ_I2C_MPU6050.hpp  LQ_SOFT_I2C_Gyro.cpp  LQ_SOFT_I2C_Gyro.hpp
lq_2k0301_project_template_for_running/LQ_Libraries_old/Driver/: LQ_AB_ENCODER.cpp  LQ_HW_ADC.cpp  LQ_HW_PWM.cpp  LQ_Uart.cpp  LQ_module_loader.cpp  lq_ncnn.cpp
lq_2k0301_project_template_for_running/LQ_Libraries_old/Driver/inc/: LQ_ATIM_PWM.hpp  LQ_GTIM_PWM.hpp  LQ_HW_PWM.hpp  LQ_PWM_ENCODER.hpp  LQ_TCP_Client.hpp  LQ_Uart.hpp  WW_TimerThread.h  WW_transmission.h
lq_2k0301_project_template_for_running/libraries/drv/inc/: lq_reg_gtim_pwm.hpp  lq_reg_pwm.hpp
lq_2k0301_project_template_for_running/libraries/drv/src/: lq_signal_handle.cpp
model/: class_names.json  cls.onnx
